Fix probrem of issues not in the tree are also collapsed when collapsing a tree in gantt

--- a/src/styles/components/_icon.scss
+++ b/src/styles/components/_icon.scss
@@ -153,7 +153,7 @@ input.autocomplete {
   padding-right: 5px;
 }
 .gantt-table .icon.expander:before {
-  width: 9px;
+  width: 10px;
 }
 @media screen and (max-width: 899px) {
   .gantt-table .icon:not(.expander):before {
